# try-bazel

./: README.md
cc-import/app/: app.cpp
cc-import/lib/: BUILD.bazel
link-with-python/: build-and-run-embedded-python  hello.cpp  install-conda
linking-with-dynamic-lib/app/: BUILD.bazel
linking-with-dynamic-lib/lib/: BUILD.bazel  libpython3.6m.dylib
rule/: empty.bzl
select/: BUILD  print_rule.bzl
