# cc_import(
#     name = "lib",
#     shared_library = "libpython3.6m.so",
#     visibility = ["//app:__pkg__"],
# )

cc_library(
    name = "lib",
    srcs = ["libpython3.6m.dylib"],
    visibility = ["//app:__pkg__"],
    linkopts=["-Wl,-rpath,@executable_path/path/to/hell"]
)

# cc_binary(
#     name = "lib",
#     srcs = ["libpython3.6m.dylib"],
#     visibility = ["//app:__pkg__"],
#     linkshared=1,
# )
